@@ -702,6 +702,9 @@ BUG FIXES
 	given a list as 'x', they now check that the list has suitable
 	names and give a more informative error message.  (PR#13936)
 
+    o 	package.skeleton() sometimes failed to fix filenames for .R or
+    	.Rd files to start with an alphanumeric.  (PR#14253)
+
 
 
 
